crates/core/tests/snapshots/container_attrs_test__partial_attrs__orders_serde_then_inherited_then_partial.snap
---
source: crates/core/tests/container_attrs_test.rs
expression: pretty_attrs(container.get_partial_attributes())
---
# [doc = r" Docs."]
# [derive (Other)]
