crates/core/tests/snapshots/container_attrs_test__partial_attrs__renders_serde_only_by_default.snap
---
source: crates/core/tests/container_attrs_test.rs
expression: pretty_attrs(container.get_partial_attributes())
---
# [serde (default , deny_unknown_fields)]
